[#30] Fix can't scroll on mobile when vertically swiping on story text

--- a/src/components/bookmark.module.css
+++ b/src/components/bookmark.module.css
@@ -48,7 +48,6 @@
   }
 
   .slider {
-    touch-action: pan-x;
     position: absolute;
     width: 100%;
     height: 100%;
